# snake-wasm

./: Cargo.toml  index.html
src/: game.rs  lib.rs
src/game/: queue.rs
