[package]
name = "snake-wasm"
version = "0.1.0"
authors = ["HieuLC <leconghieuxyz@gmail.com>"]
description = "A small project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "git remote add origin https://github.com/hieulc0/snake-wasm.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

